## Process this file with automake to produce Makefile.in
#
# $Id: Makefile.am,v 1.1 1999/12/24 21:20:28 pfkeb Exp $
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following set,  else would follow GNU conventions
AUTOMAKE_OPTIONS = foreign

geomrepincludedir = $(includedir)/geomrep

fluxinclude_HEADERS = \
	ArcRep.h      \
	BoxRep.h      \
	ConeRep.h     \
	ConsRep.h     \
	HypeRep.h     \
	PointRep.h    \
	SpheRep.h     \
	TrackRep.h    \
	TubeRep.h     \
	TubsRep.h
